Update relatorio e alteraçoes codigo

--- a/relatorio/relatorio.tex
+++ b/relatorio/relatorio.tex
@@ -94,19 +94,46 @@ Outro conceito utilizado é o de \textit{buffer}, que é um local onde serão ar
 \newpage
 
 \section{Algoritmo ABR}
-\lipsum[1]
+Para a solução do problema, foi implementado um algoritmo de adaptação de taxa de bits para tentar entregar a melhor qualidade ao usuário com base na banda disponível evitando ao máximo pausas indesejadas no vídeo. Para começar, foram seguidos alguns conceitos básicos, para calcular a qualidade máxima possível de baixar sem perdas com base no \textit{throughtput}, como podemos ver abaixo o método usado para tal:
 
 \begin{lstlisting}
-# codigos aqui
-print("Hello world")
+# Maior qualidade com base na taxa de bits sem perda de buffer
+def calcula_qualidade_maxima(self, throughput):
+    qualidade_index = 0
+    for i in range(len(self.qi)):
+        qualidade = self.qi[i]
+        if throughput < qualidade:
+            if i == 0:
+                qualidade_index = 0
+            else:
+                qualidade_index = i-1
+            break
+        elif i == len(self.qi)-1:
+            qualidade_index = len(self.qi)-1
+
+    return qualidade_index
+\end{lstlisting}
+
+Usando apenas o código apresentado acima é uma forma de se obter uma qualidade ideal para a banda disponível, mas existem alguns problemas que serão listados a seguir. Só é possível calcular a velocidade da internet após a requisição, durante a resposta, o que tem péssimas consequências em redes instáveis, pois se a banda piora, a qualidade selecionada do vídeo ainda continua a mesma e isso quer dizer que vai demorar mais tempo para baixar, o que trará consequências no \textit{buffer}, que será utilizado para que não hajam pausas no vídeo. Aí chegamos no segundo problema da abordagem, que o buffer nunca ficará com um tamanho estável, já que estamos sempre pegando a maior qualidade suportada pelo \textit{throughput}, o que fará com que ele nunca seja suficiente para as quedas de qualidade de internet.
+
+Devido ao problema mostrado acima, foi definida uma forma de calcular um \textit{buffer estável}, que representará o tamanho do \textit{buffer} mínimo para que não existam pausas no vídeo caso a qualidade da rede do usuário caia um tanto considerável, ou seja, é o tamanho que vai suprir o tempo médio necessário para baixar um segmento na qualidade atual com a pior taxa de internet já registrada durante a execução.
+
+\begin{lstlisting}
+# a explicar depois... (em desenvolvimento)
+def limite_porcento_qualidade(self, qualidade):
+    stable_buffer = self.qi[qualidade]/self.menor_taxa
+    if stable_buffer < 10:
+        stable_buffer = 10
+
+    limite = self.current_buffer/stable_buffer
+    if limite > 1:
+        limite = 1
+
+    return limite
 \end{lstlisting}
 
 \section{Conclusões}
 \lipsum[3]
-
-\lipsum[5]
-
-\lipsum[10]
 
 \begin{thebibliography}{9}
 
