--- a/relatorio/relatorio.tex
+++ b/relatorio/relatorio.tex
@@ -132,7 +132,7 @@ def limite_porcento_qualidade(self, qualidade):
     return limite
 \end{lstlisting}
 
-Apesar de todas as verificações, a estratégia ainda se mostra insuficiente, pois utiliza como base a pior taxa de transferência já registrada, o que não será muito útil se a qualidade da rede começar boa no início do vídeo e cair depois.
+Apesar de todas as verificações, a estratégia ainda se mostra insuficiente, pois utiliza como base a pior taxa de transferência já registrada, o que não será muito útil se a qualidade da rede começar boa no início do vídeo e cair depois. Para isso\dots
 
 \section{Conclusões}
 \lipsum[3]
