Referencia deixada para tras

--- a/relatorio/relatorio.tex
+++ b/relatorio/relatorio.tex
@@ -176,6 +176,10 @@ O trabalho ajudou-nos a entender melhor sobre o funcionamento dos serviços de \
 \noindent Streaming Media Editorial Staff.
 \textit{Why Adaptive Bitrate Streaming?}, 2016
 
+\bibitem{artigo1}
+\noindent Iraj Sodagar.
+\textit{The MPEG-DASH Standard for Multimedia Streaming Over the Internet}
+
 \end{thebibliography}
 
 \end{document}
