--- a/relatorio/relatorio.tex
+++ b/relatorio/relatorio.tex
@@ -149,7 +149,7 @@ def limite_porcento_qualidade(self, qualidade):
     return limite
 \end{lstlisting}
 
-Apesar de todas as verificações, a estratégia ainda se mostra insuficiente, pois utiliza como base a pior taxa de transferência já registrada, o que não será muito útil se a qualidade da rede começar boa no início do vídeo e cair depois. Para isso, foi implementada uma função que vai priorizar o carregamento do \textit{buffer} ao início da reprodução do vídeo, limitando a qualidade proporcionalmente ao tempo passado, o que pode evitar pausas em alterações de taxa de transferência para piores, mas não é tão otimizado a ponto de evitar por completo quando a banda sai do mais alto possível da plataforma \textit{pydash} para o mais baixo. 
+Apesar de todas as verificações, a estratégia ainda se mostra insuficiente, pois utiliza como base a pior taxa de transferência já registrada, o que não será muito útil se a qualidade da rede começar boa no início do vídeo e cair depois. Para isso, foi implementada uma função que vai priorizar o carregamento do \textit{buffer} ao início da reprodução do vídeo, limitando a qualidade proporcionalmente ao tempo passado seguindo uma função logarítmica. O funcionamento da mesma é de forma que a qualidade do vídeo vai seguir o comportamento da função definida no gráfico até atingir a qualidade suportada máxima pelo \textit{throughput}, assim garantindo um tempo bom para o carregamento inicial do \textit{buffer}.
 
 Por fim, também foi criado um método para controlar as quedas de qualidade de forma a não cair de uma vez para zero, que prejudica e experiência do usuário e, portanto, vai diminuir de pouco a pouco até chegar na pior qualidade. A seguir será mostrado o método que basicamente conta as quedas consecutivas de \textit{throughput} e corrige a qualidade com base nela para valores médios entre a média geral, 0 e a qualidade atual.
 
@@ -179,10 +179,10 @@ def suavisa_queda_qualidade(self, qualidade):
     return math.floor(qualidade_corrigida)
 \end{lstlisting}
 
-Com todas essas especificações, obtemos o ABR final que é mais otimizado em relação às pausas, onde serão raras em casos extremos, porém podendo ser bem longas se houver uma sequência de \texttt{LH} no início do \texttt{traffic\_shaping\_profile\_sequence}. Tirando este caso, o algoritmo roda de forma bem constante, entregando a melhor qualidade possível com a banda, porém de forma \textit{segura}, para evitar as pausas ao máximo, não priorizando muito a qualidade.
+Com todas essas especificações, obtemos o nosso ABR final é quase igualmente otimizado em relação às pausas e à qualidade. Além disso, o algoritmo roda de forma bem constante, entregando a melhor qualidade possível com a banda, porém de forma \textit{segura}, para evitar as pausas ao máximo, balanceando entre os dois fatores.
 
 \section{Conclusões}
-O trabalho ajudou-nos a entender melhor sobre o funcionamento dos serviços de \textit{streaming}, que dominam a internet na atualidade, assim como mostrando diversas dificuldades na implementação. Durante o desenvolvimento do projeto, foi necessário escolher entre priorizar a qualidade ou as pausas, onde optamos pelas pausas, que é o que evitamos o máximo possível, enquanto a qualidade não foi totalmente esquecida e ainda tentamos entregar uma ótima qualidade ao usuário, porém sempre priorizando as pausas, que se relaciona diretamente com o \textit{buffer}.
+O trabalho ajudou-nos a entender melhor sobre o funcionamento dos serviços de \textit{streaming}, que dominam a internet na atualidade, assim como mostrando diversas dificuldades na implementação. Durante o desenvolvimento do projeto, foi necessário escolher entre priorizar a qualidade ou as pausas, onde foi feito o possível para atender aos dois.
 
 \begin{thebibliography}{9}
 
